# logistic_rs

./: Cargo.toml  README.md  output.csv
src/: main.rs  scratch.ipynb
