[package]
name = "logistic_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = [ "derive" ] }
csv = "1.2.2"
fast_ode = "1.0.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
ode_solvers = "0.3.7"
textplots = "0.8.0"
timeit = "0.1.2"
